--- a/package.json
+++ b/package.json
@@ -7,10 +7,14 @@
         "build:cp": "node scripts/postBuild && copyfiles package.json LICENSE README.md dist/",
         "build:js": "del-cli --force dist && npx rollup -c",
         "build:doc": "del-cli --force docs/api && npx api-documenter markdown --input temp --output docs/api",
-        "build:dts": "del-cli --force lib && npx tsc && npx api-extractor run --local --verbose && del-cli --force lib",
+        "build:dts": "del-cli --force temp && npx tsc && npx api-extractor run --local --verbose",
         "eslint": "eslint --ext .ts,.js ./",
         "prepublishOnly": "npm test && npm run build",
-        "release": "npm run prepublishOnly && standard-version",
+        "prerelease": "npm test && npm run build",
+        "release": "standard-version",
+        "release:pre": "npm run release -- --prerelease",
+        "release:major": "npm run release -- --release-as major",
+        "release:minor": "npm run release -- --release-as minor",
         "pub": "git push --follow-tags origin && npm publish",
         "test": "npm run eslint && jest --passWithNoTests",
         "test:cov": "jest --collectCoverage --detectOpenHandles",
@@ -53,10 +57,10 @@
         "@rollup/plugin-json": "^4.x.x",
         "@types/jest": "^27.x.x",
         "@types/koa": "^2.x.x",
-        "@types/koa__router": "^8.0.9",
+        "@types/koa__router": "^8.x.x",
         "@types/node": "^16.x.x",
-        "@types/uuid": "^8.3.3",
-        "@types/ws": "^8.2.0",
+        "@types/uuid": "^8.x.x",
+        "@types/ws": "^8.x.x",
         "@typescript-eslint/eslint-plugin": "^5.x.x",
         "@typescript-eslint/parser": "^5.x.x",
         "commitlint": "^15.x.x",
@@ -79,16 +83,16 @@
     "dependencies": {
         "koa": "^2.13.4",
         "koatty_config": "^1.0.6",
-        "koatty_container": "^1.6.10",
-        "koatty_core": "^1.3.38",
+        "koatty_container": "^1.6.12",
+        "koatty_core": "^1.4.6",
         "koatty_exception": "^1.0.6",
         "koatty_lib": "^1.2.8",
         "koatty_loader": "^1.0.2",
-        "koatty_logger": "^1.2.12",
+        "koatty_logger": "^1.3.12",
         "koatty_payload": "^1.3.10",
-        "koatty_router": "^1.5.14",
-        "koatty_serve": "^1.3.11",
-        "koatty_trace": "^1.4.30",
+        "koatty_router": "^1.6.2",
+        "koatty_serve": "^1.4.2",
+        "koatty_trace": "^1.5.0",
         "reflect-metadata": "^0.1.13",
         "tslib": "^2.3.1"
     }
