--- a/package.json
+++ b/package.json
@@ -58,7 +58,6 @@
         "@types/koa": "^2.x.x",
         "@types/koa__router": "^8.x.x",
         "@types/node": "^16.x.x",
-        "@types/uuid": "^8.x.x",
         "@types/ws": "^8.x.x",
         "@typescript-eslint/eslint-plugin": "^5.x.x",
         "@typescript-eslint/parser": "^5.x.x",
@@ -81,7 +80,7 @@
     },
     "dependencies": {
         "koa": "^2.13.4",
-        "koatty_config": "^1.0.6",
+        "koatty_config": "^1.0.8",
         "koatty_container": "^1.6.16",
         "koatty_core": "^1.5.2",
         "koatty_exception": "^1.1.2",
@@ -89,9 +88,11 @@
         "koatty_loader": "^1.0.2",
         "koatty_logger": "^1.3.12",
         "koatty_payload": "^1.3.11",
-        "koatty_router": "^1.6.4",
+        "koatty_proto": "^1.1.6",
+        "koatty_router": "^1.6.6",
         "koatty_serve": "^1.4.4",
         "koatty_trace": "^1.5.4",
+        "koatty_validation": "^1.1.0",
         "reflect-metadata": "^0.1.13",
         "tslib": "^2.3.1"
     }
