--- a/package.json
+++ b/package.json
@@ -61,7 +61,7 @@
         "@types/ws": "^8.x.x",
         "@typescript-eslint/eslint-plugin": "^5.x.x",
         "@typescript-eslint/parser": "^5.x.x",
-        "commitlint": "^15.x.x",
+        "commitlint": "^11.x.x",
         "commitlint-config-gitmoji": "^2.x.x",
         "conventional-changelog-cli": "^2.x.x",
         "copyfiles": "^2.x.x",
@@ -79,21 +79,21 @@
         "typescript": "^4.x.x"
     },
     "dependencies": {
-        "koa": "^2.13.4",
-        "koatty_config": "^1.0.8",
-        "koatty_container": "^1.6.16",
-        "koatty_core": "^1.5.2",
-        "koatty_exception": "^1.1.2",
-        "koatty_lib": "^1.2.10",
-        "koatty_loader": "^1.0.2",
-        "koatty_logger": "^1.3.12",
-        "koatty_payload": "^1.3.11",
-        "koatty_proto": "^1.1.6",
-        "koatty_router": "^1.6.6",
-        "koatty_serve": "^1.4.4",
-        "koatty_trace": "^1.5.4",
-        "koatty_validation": "^1.1.0",
-        "reflect-metadata": "^0.1.13",
-        "tslib": "^2.3.1"
+        "koa": "2.13.4",
+        "koatty_config": "1.1.2",
+        "koatty_container": "1.7.4",
+        "koatty_core": "1.6.0",
+        "koatty_exception": "1.2.2",
+        "koatty_lib": "1.2.10",
+        "koatty_loader": "1.0.2",
+        "koatty_logger": "1.3.12",
+        "koatty_payload": "1.3.14",
+        "koatty_proto": "1.1.6",
+        "koatty_router": "1.7.0",
+        "koatty_serve": "1.4.6",
+        "koatty_trace": "1.6.0",
+        "koatty_validation": "1.1.0",
+        "reflect-metadata": "0.1.13",
+        "tslib": "2.3.1"
     }
 }
