--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "koatty",
-    "version": "3.6.6",
+    "version": "3.6.7",
     "description": "Koa2 + Typescript = koatty. Use Typescript's decorator implement auto injection.",
     "scripts": {
         "build": "npm run build:js && npm run build:dts && npm run build:doc && npm run build:cp",
@@ -70,6 +70,7 @@
         "husky": "^4.x.x",
         "jest": "^27.x.x",
         "jest-html-reporters": "^2.x.x",
+        "koatty_validation": "^1.x.x",
         "rollup": "^2.x.x",
         "rollup-plugin-typescript2": "^0.x.x",
         "standard-version": "^9.x.x",
@@ -86,12 +87,11 @@
         "koatty_lib": "1.2.10",
         "koatty_loader": "1.0.2",
         "koatty_logger": "1.3.12",
-        "koatty_payload": "1.3.14",
+        "koatty_payload": "1.3.15",
         "koatty_proto": "1.1.6",
-        "koatty_router": "1.7.2",
+        "koatty_router": "1.7.3",
         "koatty_serve": "1.4.8",
         "koatty_trace": "1.6.6",
-        "koatty_validation": "1.2.2",
         "reflect-metadata": "0.1.13",
         "tslib": "2.3.1"
     }
