--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "eslint": "eslint --ext .ts,.js ./",
     "prepublishOnly": "npm test && npm run build",
     "prerelease": "npm test && npm run build",
+    "pub": "git push --follow-tags origin && npm publish",
     "release": "standard-version",
     "release:pre": "npm run release -- --prerelease",
     "release:major": "npm run release -- --release-as major",
@@ -83,7 +84,7 @@
     "koatty_container": "1.7.10",
     "koatty_core": "1.6.8",
     "koatty_exception": "1.2.7",
-    "koatty_lib": "1.2.11",
+    "koatty_lib": "1.2.12",
     "koatty_loader": "1.0.3",
     "koatty_logger": "1.3.14",
     "koatty_payload": "1.3.18",
