--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "koatty",
-  "version": "3.6.9",
+  "version": "3.6.10-0",
   "description": "Koa2 + Typescript = koatty. Use Typescript's decorator implement auto injection.",
   "scripts": {
     "build": "npm run build:js && npm run build:dts && npm run build:doc && npm run build:cp",
@@ -89,9 +89,9 @@
     "koatty_logger": "1.3.14",
     "koatty_payload": "1.3.18",
     "koatty_proto": "1.1.8",
-    "koatty_router": "1.7.6",
+    "koatty_router": "1.7.8",
     "koatty_serve": "1.4.10",
-    "koatty_trace": "1.6.7",
+    "koatty_trace": "1.6.9",
     "reflect-metadata": "0.1.13",
     "tslib": "2.4.0"
   }
