--- a/package.json
+++ b/package.json
@@ -90,8 +90,9 @@
     "koatty_payload": "1.3.18",
     "koatty_proto": "1.1.8",
     "koatty_router": "1.7.9",
-    "koatty_serve": "1.4.10",
+    "koatty_serve": "1.4.11",
     "koatty_trace": "1.6.9",
+    "koatty_validation": "1.2.5",
     "reflect-metadata": "0.1.13",
     "tslib": "2.4.0"
   }
