--- a/package.json
+++ b/package.json
@@ -55,11 +55,11 @@
     "@commitlint/config-conventional": "^17.x.x",
     "@microsoft/api-documenter": "^7.x.x",
     "@microsoft/api-extractor": "^7.x.x",
-    "@rollup/plugin-json": "^4.x.x",
-    "@types/jest": "^27.x.x",
+    "@rollup/plugin-json": "^6.x.x",
+    "@types/jest": "^29.x.x",
     "@types/koa": "^2.x.x",
-    "@types/koa__router": "^8.x.x",
-    "@types/node": "^16.x.x",
+    "@types/koa__router": "^12.x.x",
+    "@types/node": "^18.x.x",
     "@types/ws": "^8.x.x",
     "@typescript-eslint/eslint-plugin": "^5.x.x",
     "@typescript-eslint/parser": "^5.x.x",
@@ -67,34 +67,38 @@
     "copyfiles": "^2.x.x",
     "del-cli": "^4.x.x",
     "eslint": "^8.x.x",
-    "eslint-plugin-jest": "^26.x.x",
+    "eslint-plugin-jest": "^27.x.x",
     "husky": "^4.x.x",
-    "jest": "^28.x.x",
+    "jest": "^29.x.x",
     "jest-html-reporters": "^3.x.x",
-    "koa-session": "^6.2.0",
-    "rollup": "^2.x.x",
+    "rollup": "^3.x.x",
     "rollup-plugin-typescript2": "^0.x.x",
     "standard-version": "^9.x.x",
-    "ts-jest": "^28.x.x",
+    "ts-jest": "^29.x.x",
     "ts-node": "^10.x.x",
     "typescript": "^4.x.x"
   },
   "dependencies": {
-    "koa": "2.13.4",
-    "koatty_config": "1.1.5",
-    "koatty_container": "1.7.10",
-    "koatty_core": "1.6.9",
-    "koatty_exception": "1.2.7",
-    "koatty_lib": "1.2.12",
-    "koatty_loader": "1.0.3",
-    "koatty_logger": "1.3.14",
-    "koatty_payload": "1.3.18",
+    "koa": "^2.13.4",
+    "koatty_config": "^1.1.5",
+    "koatty_container": "^1.7.10",
+    "koatty_core": "^1.6.9",
+    "koatty_exception": "^1.2.7",
+    "koatty_lib": "^1.2.12",
+    "koatty_loader": "^1.0.3",
+    "koatty_logger": "^1.3.16",
+    "koatty_payload": "^1.3.18",
     "koatty_proto": "^1.1.9",
-    "koatty_router": "1.8.0",
-    "koatty_serve": "1.5.1",
-    "koatty_trace": "1.7.0",
-    "koatty_validation": "1.2.5",
-    "reflect-metadata": "0.1.13",
-    "tslib": "2.4.1"
+    "koatty_router": "^1.8.0",
+    "koatty_serve": "^1.5.1",
+    "koatty_trace": "^1.7.0",
+    "koatty_validation": "^1.2.5",
+    "reflect-metadata": "^0.1.13",
+    "tslib": "^2.4.1"
+  },
+  "peerDependencies": {
+    "koatty_lib": "^1.x.x",
+    "koatty_logger": "^1.x.x",
+    "koatty_validation": "^1.x.x"
   }
 }
