--- a/package.json
+++ b/package.json
@@ -1,17 +1,17 @@
 {
   "name": "koatty",
-  "version": "3.7.4",
+  "version": "3.7.6",
   "description": "Koa2 + Typescript = koatty. Use Typescript's decorator implement auto injection.",
   "scripts": {
     "build": "npm run build:js && npm run build:dts && npm run build:doc && npm run build:cp",
     "build:cp": "node scripts/postBuild && copyfiles package.json LICENSE README.md dist/",
-    "build:js": "del-cli --force dist && npx rollup -c .rollup.config.js",
+    "build:js": "del-cli --force dist && npx rollup --bundleConfigAsCjs -c .rollup.config.js",
     "build:doc": "del-cli --force docs/api && npx api-documenter markdown --input temp --output docs/api",
     "build:dts": "del-cli --force temp && npx tsc && npx api-extractor run --local --verbose",
     "eslint": "eslint --ext .ts,.js ./",
     "prepublishOnly": "npm test && npm run build",
     "prerelease": "npm test && npm run build",
-    "push": "git push --follow-tags origin && npm publish",
+    "pub": "git push --follow-tags origin && npm publish",
     "release": "standard-version",
     "release:pre": "npm run release -- --prerelease",
     "release:major": "npm run release -- --release-as major",
@@ -79,26 +79,22 @@
     "typescript": "^4.x.x"
   },
   "dependencies": {
+    "@koa/router": "^12.0.0",
     "koa": "^2.13.4",
-    "koatty_config": "^1.1.5",
-    "koatty_container": "^1.7.10",
-    "koatty_core": "^1.6.9",
-    "koatty_exception": "^1.2.7",
-    "koatty_lib": "^1.2.12",
-    "koatty_loader": "^1.0.3",
-    "koatty_logger": "^1.3.16",
-    "koatty_payload": "^1.3.18",
-    "koatty_proto": "^1.1.9",
-    "koatty_router": "^1.8.0",
-    "koatty_serve": "^1.5.1",
-    "koatty_trace": "^1.7.0",
-    "koatty_validation": "^1.2.5",
+    "koatty_config": "^1.1.6",
+    "koatty_container": "^1.7.14",
+    "koatty_core": "^1.6.12",
+    "koatty_exception": "^1.2.8",
+    "koatty_lib": "^1.3.0",
+    "koatty_loader": "^1.1.0",
+    "koatty_logger": "^2.0.4",
+    "koatty_payload": "^1.4.0",
+    "koatty_proto": "^1.1.10",
+    "koatty_router": "^1.8.2",
+    "koatty_serve": "^1.5.4",
+    "koatty_trace": "^1.7.2",
+    "koatty_validation": "^1.2.6",
     "reflect-metadata": "^0.1.13",
     "tslib": "^2.4.1"
-  },
-  "peerDependencies": {
-    "koatty_lib": "^1.x.x",
-    "koatty_logger": "^1.x.x",
-    "koatty_validation": "^1.x.x"
   }
 }
