--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "koatty",
-  "version": "3.8.3",
+  "version": "3.9.1-0",
   "description": "Koa2 + Typescript = koatty. Use Typescript's decorator implement auto injection.",
   "scripts": {
     "build": "npm run build:js && npm run build:dts && npm run build:doc && npm run build:cp",
@@ -81,16 +81,15 @@
   "dependencies": {
     "koa": "^2.14.2",
     "koatty_config": "^1.1.6",
-    "koatty_container": "^1.8.0",
+    "koatty_container": "^1.8.1",
     "koatty_core": "^1.7.8",
     "koatty_exception": "^1.2.8",
-    "koatty_lib": "^1.3.2",
+    "koatty_lib": "^1.3.3",
     "koatty_loader": "^1.1.0",
-    "koatty_logger": "^2.1.0",
-    "koatty_payload": "^1.4.4",
-    "koatty_proto": "^1.1.11",
-    "koatty_router": "^1.8.6",
-    "koatty_serve": "^1.5.6",
+    "koatty_logger": "^2.1.1",
+    "koatty_payload": "^1.4.5",
+    "koatty_proto": "^1.1.12",
+    "koatty_serve": "^2.0.2",
     "koatty_trace": "^1.8.4",
     "koatty_validation": "^1.2.8"
   }
