--- a/package.json
+++ b/package.json
@@ -88,7 +88,6 @@
     "koatty_payload": "^1.4.6",
     "koatty_proto": "^1.1.12",
     "koatty_serve": "^2.0.4",
-    "koatty_trace": "^1.9.4",
-    "koatty_validation": "^1.2.8"
+    "koatty_trace": "^1.9.4"
   }
 }
