--- a/package.json
+++ b/package.json
@@ -81,13 +81,14 @@
     "koa": "^2.14.2",
     "koatty_config": "^1.1.6",
     "koatty_container": "^1.8.1",
-    "koatty_core": "^1.7.8",
+    "koatty_core": "^1.7.10",
+    "koatty_exception": "^1.2.8",
     "koatty_lib": "^1.3.4",
     "koatty_loader": "^1.1.0",
     "koatty_logger": "^2.1.2",
     "koatty_payload": "^1.4.6",
     "koatty_proto": "^1.1.12",
     "koatty_serve": "^2.0.4",
-    "koatty_trace": "^1.9.4"
+    "koatty_trace": "^1.10.0"
   }
 }
