--- a/package.json
+++ b/package.json
@@ -86,9 +86,8 @@
     "koatty_lib": "^1.3.4",
     "koatty_loader": "^1.1.0",
     "koatty_logger": "^2.1.2",
-    "koatty_payload": "^1.4.6",
     "koatty_proto": "^1.1.12",
-    "koatty_serve": "^2.0.4",
+    "koatty_serve": "^2.1.0-0",
     "koatty_trace": "^1.10.2"
   }
 }
