--- a/package.json
+++ b/package.json
@@ -81,14 +81,14 @@
   "dependencies": {
     "koa": "^2.14.2",
     "koatty_config": "^1.1.6",
-    "koatty_container": "^1.8.7",
+    "koatty_container": "^1.8.9",
     "koatty_core": "^1.8.2",
     "koatty_exception": "^1.2.8",
     "koatty_lib": "^1.3.4",
     "koatty_loader": "^1.1.0",
     "koatty_logger": "^2.1.2",
     "koatty_proto": "^1.1.12",
-    "koatty_serve": "^2.1.0-0",
+    "koatty_serve": "2.1.0-0",
     "koatty_trace": "^1.10.2"
   }
 }
