--- a/package.json
+++ b/package.json
@@ -82,17 +82,17 @@
     "typescript": "^5.x.x"
   },
   "dependencies": {
-    "koa": "^2.15.0",
-    "koatty_config": "^1.1.6",
-    "koatty_container": "^1.8.10",
-    "koatty_core": "^1.8.4",
-    "koatty_exception": "^1.2.8",
-    "koatty_lib": "^1.3.4",
-    "koatty_loader": "^1.1.0",
-    "koatty_logger": "^2.1.4",
-    "koatty_proto": "^1.1.12",
+    "koa": "2.14.2",
+    "koatty_config": "1.1.6",
+    "koatty_container": "1.8.10",
+    "koatty_core": "1.8.5",
+    "koatty_exception": "1.2.8",
+    "koatty_lib": "1.3.4",
+    "koatty_loader": "1.1.0",
+    "koatty_logger": "2.1.4",
+    "koatty_proto": "1.1.12",
     "koatty_serve": "2.1.0",
-    "koatty_trace": "^1.10.4",
-    "koatty_validation": "^1.3.0"
+    "koatty_trace": "1.10.4",
+    "koatty_validation": "1.3.0"
   }
 }
