--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "koatty",
-  "version": "3.11.2-3",
+  "version": "3.11.2-4",
   "description": "Koa2 + Typescript = koatty. Use Typescript's decorator implement auto injection.",
   "scripts": {
     "build": "npm run build:js && npm run build:dts && npm run build:doc && npm run build:cp",
@@ -85,14 +85,14 @@
     "koa": "2.15.0",
     "koatty_config": "1.1.6",
     "koatty_container": "1.8.10",
-    "koatty_core": "1.8.5",
+    "koatty_core": "1.8.6",
     "koatty_exception": "1.2.8",
     "koatty_lib": "1.3.4",
     "koatty_loader": "1.1.0",
     "koatty_logger": "2.1.4",
     "koatty_proto": "1.1.12",
-    "koatty_serve": "2.1.1",
+    "koatty_serve": "2.1.2-0",
     "koatty_trace": "1.10.4",
-    "koatty_validation": "1.3.0"
+    "koatty_validation": "1.3.1"
   }
 }
