--- a/package.json
+++ b/package.json
@@ -85,14 +85,15 @@
     "koa": "~2.15.0",
     "koatty_config": "~1.1.6",
     "koatty_container": "~1.8.10",
-    "koatty_core": "~1.8.6",
+    "koatty_core": "~1.9.0-3",
     "koatty_exception": "~1.2.8",
     "koatty_lib": "~1.3.4",
     "koatty_loader": "~1.1.0",
     "koatty_logger": "~2.1.4",
     "koatty_proto": "~1.1.12",
-    "koatty_serve": "~2.1.2-0",
-    "koatty_trace": "~1.11.1",
+    "koatty_router": "~1.9.0-2",
+    "koatty_serve": "~2.1.2-2",
+    "koatty_trace": "~1.11.2-0",
     "koatty_validation": "~1.3.2"
   }
 }
