--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "koatty",
-  "version": "3.11.4-2",
+  "version": "3.11.4",
   "description": "Koa2 + Typescript = koatty. Use Typescript's decorator implement auto injection.",
   "scripts": {
     "build": "npm run build:js && npm run build:dts && npm run build:doc && npm run build:cp",
@@ -92,7 +92,7 @@
     "koatty_logger": "~2.1.4",
     "koatty_proto": "~1.1.13",
     "koatty_router": "~1.9.2",
-    "koatty_serve": "~2.1.4",
+    "koatty_serve": "~2.1.5",
     "koatty_trace": "~1.12.3",
     "koatty_validation": "~1.3.2"
   }
