--- a/package.json
+++ b/package.json
@@ -4,14 +4,14 @@
   "description": "Koa2 + Typescript = koatty. Use Typescript's decorator implement auto injection.",
   "scripts": {
     "build": "npm run build:js && npm run build:dts && npm run build:doc && npm run build:cp",
-    "build:cp": "node scripts/postBuild && copyfiles package.json LICENSE README.md dist/",
-    "build:js": "del-cli --force dist && npx rollup --bundleConfigAsCjs -c .rollup.config.js",
-    "build:doc": "del-cli --force docs/api && npx api-documenter markdown --input temp --output docs/api",
-    "build:dts": "del-cli --force temp && npx tsc && npx api-extractor run --local --verbose",
+    "build:cp": "node scripts/postBuild && npx copyfiles package.json LICENSE README.md dist/",
+    "build:js": "npx rollup --bundleConfigAsCjs -c .rollup.config.js",
+    "build:doc": "npx api-documenter markdown --input temp --output docs/api",
+    "build:dts": "npx tsc && npx api-extractor run --local --verbose",
     "eslint": "eslint --ext .ts,.js ./",
-    "lock": "npm i --package-lock-only",
+    "lock": "npx del-cli --force node_modules && npm i --package-lock-only && npx pnpm i",
     "prepublishOnly": "npm test && npm run build && git push --follow-tags origin",
-    "prerelease": "npm test && npm run build",
+    "prerelease": "npm run lock && npm test && npm run build",
     "release": "standard-version",
     "release:pre": "npm run release -- --prerelease",
     "release:major": "npm run release -- --release-as major",
@@ -23,7 +23,8 @@
   "main": "./dist/index.js",
   "exports": {
     "require": "./dist/index.js",
-    "import": "./dist/index.mjs"
+    "import": "./dist/index.mjs",
+    "types": "./dist/index.d.ts"
   },
   "directories": {
     "doc": "docs"
@@ -53,18 +54,22 @@
   "devDependencies": {
     "@commitlint/cli": "^19.x.x",
     "@commitlint/config-conventional": "^19.x.x",
+    "@grpc/grpc-js": "^1.12.2",
     "@microsoft/api-documenter": "^7.x.x",
     "@microsoft/api-extractor": "^7.x.x",
+    "@rollup/plugin-commonjs": "^28.x.x",
     "@rollup/plugin-json": "^6.x.x",
+    "@rollup/plugin-node-resolve": "^15.x.x",
     "@types/jest": "^29.x.x",
     "@types/koa": "^2.x.x",
-    "@types/koa__router": "^12.x.x",
+    "@types/koa-compose": "^3.x.x",
+    "@types/lodash": "^4.x.x",
     "@types/node": "^22.x.x",
+    "@types/on-finished": "^2.x.x",
+    "@types/ws": "^8.x.x",
     "@typescript-eslint/eslint-plugin": "^8.x.x",
     "@typescript-eslint/parser": "^8.x.x",
     "conventional-changelog-cli": "^5.x.x",
-    "copyfiles": "^2.x.x",
-    "del-cli": "^6.x.x",
     "eslint": "^8.x.x",
     "eslint-plugin-jest": "^28.x.x",
     "husky": "^4.x.x",
@@ -72,6 +77,7 @@
     "jest-html-reporters": "^3.x.x",
     "reflect-metadata": "^0.x.x",
     "rollup": "^4.x.x",
+    "rollup-plugin-delete": "^2.1.0",
     "rollup-plugin-typescript2": "^0.x.x",
     "standard-version": "^9.x.x",
     "ts-jest": "^29.x.x",
@@ -81,17 +87,17 @@
   },
   "dependencies": {
     "koa": "~2.15.3",
-    "koatty_config": "~1.1.6",
-    "koatty_container": "~1.8.10",
-    "koatty_core": "~1.10.0-6",
-    "koatty_exception": "~1.4.4-0",
-    "koatty_lib": "~1.3.4",
+    "koatty_config": "~1.2.0",
+    "koatty_container": "~1.9.2",
+    "koatty_core": "~1.10.0-12",
+    "koatty_exception": "~1.4.4",
+    "koatty_lib": "~1.4.0",
     "koatty_loader": "~1.1.0",
-    "koatty_logger": "~2.1.6",
-    "koatty_proto": "~1.1.14",
+    "koatty_logger": "~2.1.8",
+    "koatty_proto": "~1.2.0",
     "koatty_router": "~1.10.0-0",
     "koatty_serve": "~2.1.6-0",
     "koatty_trace": "~1.12.3",
-    "koatty_validation": "~1.3.4"
+    "koatty_validation": "~1.3.6"
   }
 }
