--- a/package.json
+++ b/package.json
@@ -75,6 +75,8 @@
     "husky": "^4.x.x",
     "jest": "^29.x.x",
     "jest-html-reporters": "^3.x.x",
+    "koatty_exception": "~1.5.2",
+    "koatty_validation": "~1.x.x",
     "reflect-metadata": "^0.x.x",
     "rollup": "^4.x.x",
     "rollup-plugin-delete": "^2.1.0",
@@ -90,14 +92,12 @@
     "koatty_config": "~1.2.0",
     "koatty_container": "~1.9.4",
     "koatty_core": "~1.10.0-14",
-    "koatty_exception": "~1.4.4",
     "koatty_lib": "~1.4.0",
     "koatty_loader": "~1.1.0",
     "koatty_logger": "~2.1.8",
     "koatty_proto": "~1.2.0",
-    "koatty_router": "~1.10.0-0",
-    "koatty_serve": "~2.1.6-0",
-    "koatty_trace": "~1.12.3",
-    "koatty_validation": "~1.3.6"
+    "koatty_router": "~1.10.0",
+    "koatty_serve": "~2.2.0",
+    "koatty_trace": "~1.12.4"
   }
 }
