--- a/package.json
+++ b/package.json
@@ -76,13 +76,14 @@
     "husky": "^4.x.x",
     "jest": "^29.x.x",
     "jest-html-reporters": "^3.x.x",
-    "koatty_exception": "~1.5.2",
+    "koatty_exception": "~1.5.3",
     "koatty_validation": "~1.x.x",
     "reflect-metadata": "^0.x.x",
     "rollup": "^4.x.x",
     "rollup-plugin-delete": "^2.1.0",
     "rollup-plugin-typescript2": "^0.x.x",
     "standard-version": "^9.x.x",
+    "supertest": "^7.0.0",
     "ts-jest": "^29.x.x",
     "ts-node": "^10.x.x",
     "tslib": "^2.x.x",
@@ -92,13 +93,13 @@
     "koa": "~2.15.3",
     "koatty_config": "~1.2.0",
     "koatty_container": "~1.9.4",
-    "koatty_core": "~1.10.0-20",
+    "koatty_core": "~1.10.0",
     "koatty_lib": "~1.4.0",
     "koatty_loader": "~1.1.0",
     "koatty_logger": "~2.1.8",
     "koatty_proto": "~1.2.0",
     "koatty_router": "~1.10.0",
     "koatty_serve": "~2.2.0",
-    "koatty_trace": "~1.12.4"
+    "koatty_trace": "~1.13.1"
   }
 }
